--- a/src/App.css
+++ b/src/App.css
@@ -1,42 +1,72 @@
-#root {
-  max-width: 1280px;
-  margin: 0 auto;
-  padding: 2rem;
-  text-align: center;
+.container{
+  display: flex; 
+  flex-direction: column; 
+  justify-content: center;
+  align-items:center; 
+  height: 100vh; 
 }
 
-.logo {
-  height: 6em;
-  padding: 1.5em;
-  will-change: filter;
-  transition: filter 300ms;
-}
-.logo:hover {
-  filter: drop-shadow(0 0 2em #646cffaa);
-}
-.logo.react:hover {
-  filter: drop-shadow(0 0 2em #61dafbaa);
+.h1{
+  color: black; 
+  margin-bottom: 30px; 
+  text-align: center; 
 }
 
-@keyframes logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.grid { 
+  display: grid; 
+  grid-template-columns: repeat(3, 200px); 
+  grid-template-rows: repeat(3, 200px);
+  gap: 50px; 
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  a:nth-of-type(2) .logo {
-    animation: logo-spin infinite 20s linear;
-  }
+.img{
+  height: auto;  
+  width: auto; 
 }
 
-.card {
-  padding: 2em;
+.grid-item{ 
+  display: flex;
+  flex-direction : column ;
+  border: 1px solid #333;
+
 }
 
-.read-the-docs {
-  color: #888;
+.text-container{
+  height: 70px; 
+}
+
+.h2{
+  font-size: 20px; 
+  width: auto; 
+  margin: 0;
+  text-align: center; 
+}
+
+.character-detail {
+  margin-top: 20px;
+}
+
+.character-detail h2 {
+  font-size: 24px;
+}
+
+.character-detail p {
+  font-size: 16px;
+  margin-top: 10px;
+}
+
+.character-detail h3 {
+  margin-top: 20px;
+}
+
+.character-detail ul {
+  list-style-type: none;
+  padding: 0;
+}
+
+.character-detail li {
+  
+  margin: 5px 0;
+  padding: 10px;
+
 }
